tests/baselines/reference/genericTypeAssertions5.errors.txt
tests/cases/compiler/genericTypeAssertions5.ts(19,5): error TS2322: Type 'A' is not assignable to type 'T'.
  'A' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions5.ts(20,5): error TS2322: Type 'B' is not assignable to type 'T'.
  'B' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions5.ts(21,5): error TS2322: Type 'C' is not assignable to type 'T'.
  'C' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions5.ts(23,9): error TS2352: Conversion of type 'B' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'B' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions5.ts(24,9): error TS2352: Conversion of type 'C' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'C' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.


==== tests/cases/compiler/genericTypeAssertions5.ts (5 errors) ====
    interface A {
        foo(): string;
    }
    
    interface B extends A {
        bar(): number;
    }
    
    interface C extends A {
        baz(): number;
    }
    
    var a: A;
    var b: B;
    var c: C;
    
    function foo2<T extends A>(x: T) {
        var y = x;
        y = a; // error: cannot convert A to T
        ~
!!! error TS2322: Type 'A' is not assignable to type 'T'.
!!! error TS2322:   'A' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
        y = b; // error: cannot convert B to T
        ~
!!! error TS2322: Type 'B' is not assignable to type 'T'.
!!! error TS2322:   'B' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
        y = c; // error: cannot convert C to T
        ~
!!! error TS2322: Type 'C' is not assignable to type 'T'.
!!! error TS2322:   'C' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
        y = <T>a;
        y = <T>b; // error: cannot convert B to T
            ~~~~
!!! error TS2352: Conversion of type 'B' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   'B' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
        y = <T>c; // error: cannot convert C to T
            ~~~~
!!! error TS2352: Conversion of type 'C' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   'C' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
    }